--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   image_picker: ^0.8.3+3
   font_awesome_flutter: ^10.1.0
   flare_flutter: ^3.0.2
+  flutter_screenutil: ^5.5.3+2
 
 
 dev_dependencies:
